# multigit-rs

./: .gitignore  Cargo.toml  Config  Justfile  README.md
.github/workflows/: rust.yml
scripts/: demo.tape  replace.awk
src/: lib.rs  main.rs
