[package]
name = "multigit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
colored_markup = "0.1.1"
edit = "0.1.5"
git2 = "0.19.0"
inquire = "0.7.5"
path-absolutize = "3.1.1"
serde = { version = "1.0.210", features = ["derive"] }
shellexpand = "3.1.0"
termsize = "0.1.9"
toml = "0.8.19"
walkdir = "2.5.0"
